--- a/src/main/resources/templates/thymeleaf/band/band_update.html
+++ b/src/main/resources/templates/thymeleaf/band/band_update.html
@@ -11,9 +11,12 @@
                     <div class="col-md-8 col-lg-7 col-xl-7 mx-auto my-5">
                     	<input name="band_admin" type="hidden" th:value="${session.Member_Id}"/>
                     	<input id="bandUrl" name="bandUrl" type="hidden" th:value="${updateMyBand.getBand_code()}" />
+                    	<input id="origin_band_thumnail" name="origin_band_thumnail" type="hidden" th:value="${updateMyBand.getBand_thumnail()}" />
                         <p class="h4 text-center">밴드 정보 수정</p>
-                        <input name="band_thumnail" class="form-control" type="file" id="formFileMultiple"  onchange="readURL(this);" multiple th:value="${updateMyBand.getBand_thumnail()}">
+                        <input name="band_thumnail" class="form-control" type="file" id="formFileMultiple"  onchange="readURL(this);" th:value="${updateMyBand.getBand_thumnail()}"  multiple >
 						<img id="blah" th:src="@{'../img/uploadBandThumnail/'+${updateMyBand.getBand_thumnail()}}" alt="#" class="border my-3 mx-auto d-block " width="200" height="200"/>
+						
+						<span th:text="${updateMyBand.getBand_thumnail()}"></span>
 						
 						<div class="form-floating mb-3">
 							<input name="band_name" type="text" class="form-control" id="input_bandName" placeholder="${updateMyBand.getBand_name()}" size="15" th:value="${updateMyBand.getBand_name()}">
@@ -23,9 +26,8 @@
 
 						<div class="form-floating">
 							<textarea name="band_content" class="form-control" placeholder="${updateMyBand.getBand_content()}"
-								id="textarea_bandContent" style="height: 200px" th:value="${updateMyBand.getBand_content()}"></textarea>
+								id="textarea_bandContent" style="height: 200px" th:text="${updateMyBand.getBand_content()}"></textarea>
 							<label for="textarea_bandContent">밴드 소개글을 입력해주세요. <br />
-								<span th:text="${updateMyBand.getBand_content()}"></span>
 							</label>
 						</div>
                         
