--- a/src/main/resources/static/css/ai.css
+++ b/src/main/resources/static/css/ai.css
@@ -30,8 +30,8 @@ body{
 
 /* 캐로셀 안 Box 틀 */
 #ai .ai-box {
-    margin: 65px auto 200px;
-    height: 500px;
+    margin: 0px auto 100px;
+    height: 600px;
     text-align: center;
     padding: 50px 50px 130px;
 }
@@ -45,6 +45,7 @@ body{
     -webkit-backdrop-filter: blur(4px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
+    max-width: 700px;
 }
 
 
@@ -131,7 +132,7 @@ body{
 }
 
 .btn_start{
-    margin-left: 120px;
+/*     margin-left: 120px; */
 }
 
 .carousel-inner .ai-box .btn .btn_start {
@@ -314,10 +315,11 @@ body{
 }
 .areabtn label{
 	width: 100%;
+	height: 50px;
 }
 .areabtn label span{
 	height: 50px;
-	line-height: 50px;
+	line-height: 37px;
 }
 /* Content 3 | 기간 선택 */
 
@@ -378,10 +380,12 @@ body{
     display: block;
     width: 100%;
     position: relative;
+    
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 1);
     z-index: 1;
 }
 .theme-box-parent>div>label>span{
+	cursor: pointer;
     display: block;
     width: 100%;
     position: absolute;
@@ -396,20 +400,18 @@ body{
     filter: blur(1px) brightness(70%);
 }
 .theme-box-parent>div>input:checked +label>div{
-	 background: url("../img/aicc/icon_travel_period_on.png") 50% 50% no-repeat !important;
+	 /* background: url("../img/aicc/icon_travel_period_on.png") 50% 50% no-repeat !important; */
 	 position: relative;
-	 z-index: 3;
 	 background-color: white;
 	   box-shadow: 0px 0px 10px 3px white;
     box-sizing: border-box;
     filter: blur(0px);
 }
-.theme-box-parent>div>input:checked +label>span{
-	text-indent: -99999px;
-}
+
 /* 이미지 호버시 효과 */
-.theme-box-parent>div>label>div:hover{
+.theme-box-parent>div>label>div:hover,.theme-box-parent>div>label>span:hover+div{
     filter: blur(0px);
+    
     /*filter: brightness(100%);*/
 }
 
@@ -452,6 +454,11 @@ body{
     height: 100px;
 }
 
+.robot{
+	position: relative;
+	 animation-name: cosStart;
+    animation-duration: 3s;
+}
 
 /*--------------------------------- 미디어쿼리 ----------------------------------*/
 @media (max-width: 786px){
