--- a/src/main/resources/static/css/feed.css
+++ b/src/main/resources/static/css/feed.css
@@ -32,17 +32,6 @@ display:inline-block;
   -webkit-backdrop-filter: blur( 4px );
 }
 
-.feed-box-bot div:first-child span:before{
-  content: "🧳";
-  color: var(--black);
-  width: 10px;
-}
-
-.feed-box-bot div:last-child span+span:before{
-  content: "❤";
-  color: var(--black);
-}
-
 #feed input[type="checkbox"]+label{
   width: 50px;
   height: 50px;
@@ -162,11 +151,12 @@ display:inline-block;
 }
 
 
-#feedWrite input[type=radio] {
+#feedWrite input[type=radio], #feedUpdate input[type=radio] {
 	display: none;
 }
 
-#feedWrite input[type="radio"]:checked + label{
+
+#feedWrite input[type="radio"]:checked + label, #feedUpdate input[type="radio"]:checked + label{
 	background-color: var(--black);
 	color: var(--white);
 }
