--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -2,6 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <div th:replace="~{head/head::head}">
 </div>
+
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
 <body>
 <div th:replace="~{nav/nav::nav}">
 </div>
@@ -82,13 +84,13 @@
         </a>
     </div>
     <!--------------------------------------------feed box Parent------------------------------------------>
-    <div class="m-auto mt-5 pt-5 pt-md-0">
-        <div class="card-columns justify-content-center align-items-start mt-3 m-0 row-box">
+    <div class="m-auto pt-5 pt-md-0">
+        <div class="card-columns justify-content-center align-items-start m-0 row-box">
             <!--feed box Start-->
             <div class="col feed-box m-0 my-3 px-0 no-gutters" th:each="feed : ${feedList}">
                     <!--feed box top-->
                     <div class="col-12 hstack feed-box-top py-3 px-3 z-3">
-                        <img src="../img/feed/user_rabbit.jpg" class="float-start rounded-circle border me-3" width="50"
+                        <img th:src="@{'../img/member_thumbnail/'+${feed.Member_profileimage}}" class="float-start rounded-circle border me-3" width="50"
                              height="50" alt="">
                         <!--feed box text-->
                         <div class="col px-0">
@@ -99,12 +101,12 @@
                         </div>
                         <!-- 우측 버튼 -->
                         <div class="col-4 d-flex justify-content-end align-items-center">
-                            <a th:href="@{'/feed_show?num='+${feed.Feed_num}}" class="">
-                            	<button type="button" class="btn btn-sm btn-dark">전체</button>
+                            <a th:href="@{'/feed_show?num='+${feed.Feed_num}}" class="btn btn-sm btn-dark">
+                            	전체
                             </a>
                             <div th:if="${session.Member_Id == feed.Member_Id}">
                             <div class="f17" id="feed-right">
-								<a class="dropdown-toggle text-center m-0 ps-3" href="#"
+								<a class="dropdown-toggle text-center m-0 ps-3 pe-1" href="#"
 									role="button" id="dropdownMenuLink" data-bs-toggle="dropdown"
 									aria-expanded="false"></a>
 								<ul class="dropdown-menu dropdown-menu-dark">
@@ -148,12 +150,13 @@
                         <span class="f13" th:text="${feed.Feed_content}">맥주는 왜 먹어도 먹어도 맛있을까요? </span>
                     </div>
                     <!--feed box bot | text-->
-                    <div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
-                        <div class="col-6 hstack justify-content-center border-end">
+                    <div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13 d-flex hstack">
+                        <div class="col-6 hstack justify-content-center border-end d-flex hstack">
                             <span>담기</span>
+                            <i class="fi fi-br-bookmark hstack px-1"></i>
                         </div>
-                        <div class="col-6 hstack justify-content-center">
-                            <i class="bi bi-heart"></i><span>좋아요</span><span class="ms-2">9999+</span>
+                        <div class="col-6 hstack justify-content-center hstack">
+                            <span>좋아요</span><i class="fi fi-br-heart hstack px-1"></i><span class="ms-2">999+</span>
                         </div>
                     </div>
                 </a>
