--- a/src/main/resources/templates/thymeleaf/feed/feed_write.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_write.html
@@ -14,7 +14,7 @@
 			<i class="fi fi-sr-angle-small-left f22 text-center"></i>
 		</button>
 		<!--------------------------------------------feed box Parent------------------------------------------>
-		<div class="row m-auto my-2 mb-lg-4 pt-md-0">
+		<div class="row m-auto my-2 mt-lg-1 mb-5 pt-md-0">
 			<div class="col-10 col-xl-7 mt-3 m-0 feed-box mx-auto">
 				<!--feed box Start-->
 				<div class="row">
@@ -82,7 +82,7 @@
 						<div class="col-12 feed-box-bot p-3 d-column gap-3">
 							<span class="d-block fw-bold mb-1">
 							<input type="text" id="Feed_title" name="Feed_title" class="form-control" placeholder="제목을 작성해주세요"/></span>
-							<span class="f13"><textarea id="Feed_content" class="form-control f13" placeholder="내용을 작성해주세요" name="Feed_content" rows="5"></textarea></span>
+							<textarea id="Feed_content" class="form-control f14" placeholder="내용을 작성해주세요" name="Feed_content" rows="5"></textarea>
 						</div>
 					</div>
 					<!--feed box Right | #TAG -->
