--- a/src/main/resources/static/css/feed.css
+++ b/src/main/resources/static/css/feed.css
@@ -21,7 +21,7 @@ display:inline-block;
 
 /* feed-box (center) */
 :not(#feedBox) .feed-box-center{
-  height: 250px;
+  min-height: 250px;
   object-fit: fill;
 }
 
@@ -44,7 +44,7 @@ display:inline-block;
 }
 
 #feed input[type="checkbox"]+label::after{
-  content:'dsfds✔';
+  content:'✔';
   font-size: 25px;
   width: 30px;
   height: 30px;
@@ -121,13 +121,14 @@ display:inline-block;
 
 /* feed thumbnail Btn */
 .feed-fileUpload{
-	position: absolute;
-	top: 50px;
-	left: 50px;
-	width: 70%;
-	height: 100%;
-	opacity: 0;
-	cursor: pointer;
+position: absolute;
+    width: 80%;
+    height: 90%;
+    opacity: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -55%);
+    cursor: pointer;
 }
 
 /* #feedCarousel 으로 시작하는 것의 모든 */
@@ -144,6 +145,20 @@ display:inline-block;
 	height: 8px;
     border-radius: 50%;
     /* background-color: var(--black); */
+}
+
+[id^="feed"] .carousel-item {
+	min-height: 360px;
+}
+
+[id^="feed"] .carousel-item img{
+
+    width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 }
 
 [id^="feedCarousel"] .carousel{
@@ -164,8 +179,15 @@ display:inline-block;
 
 /* 드롭다운 메뉴 화살표 없애기 */
 #feed-right .dropdown-toggle::after {
+    margin-left: 0;
 	margin-top: 2px;
-    content: "⋮";
+/*     content: "⋮"; */
     height: 100%;
     border: none;
+}
+
+
+/*  */
+.feed-comment-update{
+	transform: scale(0.9);
 }
