--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <div th:replace="~{head/head::head}">
 </div>
-
+<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
 <body>
 <div th:replace="~{nav/nav::nav}">
@@ -100,20 +100,24 @@
                                 class="float-start text-muted f13 ms-3">2시간 전</span>
                         </div>
                         <!-- 우측 버튼 -->
-                        <div class="col-4 d-flex justify-content-end align-items-center">
+                        <div class="col-3 d-flex justify-content-end align-items-center">
                             <a th:href="@{'/feed_show?num='+${feed.Feed_num}}" class="btn btn-sm btn-dark">
                             	전체
                             </a>
+                            <!-- 수정 및 삭제 버튼  -->
                             <div th:if="${session.Member_Id == feed.Member_Id}">
-                            <div class="f17" id="feed-right">
-								<a class="dropdown-toggle text-center m-0 ps-3 pe-1" href="#"
-									role="button" id="dropdownMenuLink" data-bs-toggle="dropdown"
-									aria-expanded="false"></a>
-								<ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item active" th:href="@{'/delFeed?num='+${feed.Feed_num}}">삭제</a></li>
-                                    <li><a class="dropdown-item" th:href="@{'/feed_update?num='+${feed.Feed_num}}">수정</a></li>
-                                </ul>
-                            </div>
+	                            <div class="f17 hstack" id="feed-right">
+									<a class="dropdown-toggle text-center m-0 ps-2 pt-1 d-block d-flex justify-content-end" href="#"
+										role="button" id="dropdownMenuLink" data-bs-toggle="dropdown"
+										aria-expanded="false">
+									<i class="fi fi-rr-menu-dots-vertical">
+									</i>
+									</a>
+									<ul class="dropdown-menu dropdown-menu-dark">
+	                                    <li><a class="dropdown-item active" th:href="@{'/delFeed?num='+${feed.Feed_num}}">삭제</a></li>
+	                                    <li><a class="dropdown-item" th:href="@{'/feed_update?num='+${feed.Feed_num}}">수정</a></li>
+	                                </ul>
+	                            </div>
                             </div>
                         </div>
                     </div>
@@ -123,7 +127,7 @@
                             <!-- carousel items loop -->
                             <div class="carousel-inner">
                                 <div th:each="thumbnail, thumbnailStat : ${#strings.arraySplit(feed.Feed_thumbnail, ',')}"
-                                     class="carousel-item p-0"
+                                     class="carousel-item p-0 h-100"
                                      th:classappend="${thumbnailStat.index==0} ? 'active' : ''">
                                     <img th:src="@{'../img/feed_thumbnail/' + ${thumbnail}}"
                                          class="d-block w-100" alt="#">
@@ -145,8 +149,8 @@
                         </div>
                     </div>
                     <!--feed-box-bot | text-->
-                    <div class="col-12 feed-box-bot p-3">
-                        <span class="fw-bold mb-1" th:text="${feed.Feed_title}">맥주 맛집🍺✨</span>
+                    <div class="col-12 feed-box-bot p-4 pt-3 pb-5">
+                        <span class="fw-bold mb-2" th:text="${feed.Feed_title}">맥주 맛집🍺✨</span>
                         <span class="f13" th:text="${feed.Feed_content}">맥주는 왜 먹어도 먹어도 맛있을까요? </span>
                     </div>
                     <!--feed box bot | text-->
