--- a/src/main/resources/templates/thymeleaf/feed/feed_update.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed_update.html
@@ -10,15 +10,15 @@
 <div id="feedUpdate" class="container-fluid mt-4 mb-5 p-0">
 	<form id="feedUpdateForm" action="/feed_update_action" method="post" enctype="multipart/form-data">
 		<!-- 뒤로가기 버튼 -->
-		<button class="btn backBtn shadow-sm rounded-circle ms-4 position-absolute" onclick="history.back()">
+		<button class="btn backBtn shadow-sm rounded-circle ms-4" onclick="history.back()">
 		<i class="fi fi-sr-angle-small-left f22 text-center"></i>
 		</button>
 		<input type="hidden" name="num" th:value="${feedList.Feed_num}"/>
 		<!--------------------------------------------feed box Parent------------------------------------------>
-		<div class="row m-auto my-2 mt-lg-0 mb-lg-4 pt-md-0">
+		<div class="row m-auto my-2 mt-lg-1 mb-5 pt-md-0">
 			<div class="col-10 col-xl-7 mt-3 m-0 feed-box mx-auto">
 				<div class="row">
-					<div class="col-12 col-md-6 feed-write-left feed-box p-0 feed-box-width overflow-hidden">
+					<div class="col-12 col-md-6 feed-write-left feed-box p-0 feed-box-width">
 						<!--feed box Start-->
 						<div class="col-12 m-0 mb-3 px-0 no-gutters m-auto">
 							<!--feed box top-->
